Fix: Set abs-img-1 bottom to 0px on mobile to prevent overflow
- Changed bottom from -60px to 0px for .about .abs-img-1 on mobile
- Reduced padding-bottom of .about-banner from 60px to 0px since element no longer overflows

--- a/assets/css/combined.css
+++ b/assets/css/combined.css
@@ -3338,7 +3338,7 @@ textarea.input-field {
     max-width: 100%;
     position: relative;
     padding-top: 30px;
-    padding-bottom: 60px;
+    padding-bottom: 0px;
   }
 
   .about-banner > .w-100 {
@@ -3364,7 +3364,7 @@ textarea.input-field {
   .about .abs-img-1 {
     width: 100px;
     max-width: 100px;
-    bottom: -60px;
+    bottom: 0px;
     left: 0;
     padding-block: 20px;
   }
